Make .show-for-<_>-up more agressive in hiding stuff (fix blinking alert message bug on small devices)

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -34,6 +34,14 @@ html, body {
   }
 }
 
+@media (max-width: 40.0625em) {
+  .show-for-medium-up {
+    display: none!important;
+    visibility: hidden!important;
+    opacity: 0!important;
+  }
+}
+
 body {
   font-family: "Open Sans", "Helvetica", sans-serif;
   margin: 0;
